src/views/views-styles.scss
/* ... */
// Welcome Section Two MOBILE
@media (max-width: 800px) {
  .welcome__section-two {
    display: inline-block;
  }

  .welcome-section-two__copy-container--top {
    display: block;
  }

  .welcome__section-two h2 {
    font-size: $welcome__font-size-big--mobile;
    line-height: $welcome__line-height-big--mobile;
  }

  .welcome__section-two h3 {
    font-size: $welcome__font-size-big--mobile;
    line-height: $welcome__line-height-big--mobile;
  }

  .welcome-section-two__copy--medium {
    font-size: $welcome__font-size-medium--mobile;
    line-height: $welcome__line-height-medium--mobile;
    margin-bottom: 0.5em;
  }

  .welcome-section-two__copy--small {
    font-size: $welcome__font-size-small--mobile;
    line-height: $welcome__line-height-small--mobile;
  }

  .welcome-section-two__copy-container--top div {
    display: grid;
    grid-template-columns: 4fr 9fr;
  }

  .welcome-section-two__copy-container--bottom {
    grid-template-columns: 4fr 9fr;
  }
}

// Welcome Section three DESKTOP
.welcome__desktop-section-three {
  margin-bottom: 9em; // over-rides welcome__section class
}

.welcome__desktop-section-three h2 {
  font-family: Montserrat;
  font-style: normal;
  font-weight: 200;
  font-size: 96px;
  line-height: 117px;
}

.welcome__desktop-section-three-content {
  display: grid;
  grid-template-columns: 11fr 13fr;
}

.welcome__desktop-section-three-content--left {
  margin-top: 1em;
}

.welcome__desktop-section-three-content-left--top {
  display: grid;
  grid-template-columns: 10fr 1fr;
}

.welcome__desktop-section-three-content-left--top p {
  font-size: 32px;
  line-height: 39px;
}

.welcome__desktop-section-three-content-left--top span {
}

.welcome__desktop-section-three-content-left--bottom {
  display: grid;
  grid-template-columns: 5fr 1fr 5fr;
  margin-top: 2em;
}

.welcome__button--desktop {
  font-weight: bold;
  line-height: 20px;
  text-align: center;
}

.welcome__desktop-section-three-button {
  width: 100%;
}

.welcome__desktop-section-three-content-left--bottom ul {
  font-family: Montserrat;
  font-weight: bold;
  line-height: 20px;
  list-style-type: circle;
  margin-right: -400px;
}

.welcome__desktop-section-three-content-left--bottom li {
  margin-left: 20px;
  font-weight: normal;
}

.welcome__desktop-section-three-content--right {
  margin-top: -30%;
  z-index: -1;
}

.welcome__desktop-section-three-content-right-phone-image {
  height: 390px;
  width: 100%;
}

.welcome__desktop-section-three-content-right--bottom {
  display: grid;
  grid-template-columns: 9fr 4fr;
}

.welcome__desktop-section-three-content-right--bottom img {
  margin-left: -44px;
  margin-top: -50px;
  width: 85px;
}

.welcome__desktop-section-three-content-right--bottom p {
  line-height: 20px;
}

// Welcome Section Three MOBILE
.welcome__mobile-section-three {
  margin-bottom: 6em; // over-rides welcome__section class
}

.welcome__mobile-section-three-header-wrapper {
  z-index: 1;
  margin-bottom: -4em;
}

.welcome__mobile-section-three-header-wrapper h2 {
  font-style: normal;
  font-weight: 200;
  font-size: 60px;
  line-height: 70px;
}

.welcome__mobile-section-three-content--top {
  margin-top: 35px;
  position: relative;
  z-index: -1;
}

.welcome__mobile-section-three-phone-image {
  height: auto;
  width: 100%;
}

.welcome__mobile-section-three-top-content-div {
  margin-bottom: 1em;
}

.welcome__mobile-badge-image-copy-wrapper {
  display: grid;
  grid-template-columns: 2fr 22fr;
  padding-top: 0.5em;
}

.welcome__mobile-badge-image-copy-wrapper img {
  margin-left: -12px;
  margin-top: -28px;
  width: 39px;
}

.welcome__mobile-badge-copy-wrapper {
  padding-left: 5px;
}

.welcome__mobile-section-three-content--middle {
  margin-top: 2em;
}

.welcome__mobile-section-three-content--middle p {
  font-family: Montserrat;
  font-size: $welcome__font-size-medium--mobile;
  line-height: $welcome__line-height-medium--mobile;
}

.welcome__mobile-section-three-content--bottom {
  margin-top: 2em;
}

.welcome__mobile-section-three-content--bottom-list-title {
  font-weight: bold;
  margin-bottom: $welcome__line-height-small--mobile * 0.33;
}

.welcome__mobile-section-three-content--bottom span {
}

.welcome__mobile-section-three-content--bottom ul {
  font-weight: bold;
  font-size: $welcome__font-size-small--mobile;
  line-height: $welcome__line-height-small--mobile;
  list-style-type: circle;
  margin-bottom: 2em;
}

.welcome__mobile-section-three-content--bottom li {
  font-weight: normal;
  margin-bottom: $welcome__line-height-small--mobile * 0.33;
  margin-left: 1em;
}

// Welcome Section Four - DESKTOP
.welcome__blue-background {
  background-color: #17294a;
  padding-bottom: 3em;
  padding-top: 3em;
  position: relative;
  z-index: 1;
}

.welcome__desktop-section-four {
  margin-top: 3em;
  margin-bottom: 6em;
}

.welcome__desktop-section-four-top {
  position: relative;
}

.welcome__desktop-section-four-top h2 {
  font-weight: 200;
  font-size: 96px;
  line-height: 117px;
}

.welcome__desktop-section-four-top--left {
  display: grid;
  grid-template-columns: 11fr 13fr;
  margin-top: 1em;
  position: absolute;
  z-index: 1;
}

.welcome__desktop-section-four-top--left p {
  font-size: 32px;
  line-height: 39px;
}

.welcome__desktop-section-four-top--right {
  display: grid;
  grid-template-columns: 10fr 14fr;
  width: 100%;
  position: relative;
  z-index: -1;
}

.welcome__desktop-section-four-top--right img {
  width: 100%;
  margin-top: -50px;
}

.welcome__desktop-section-four-bottom {
  margin-top: 3em;
}

//These fix a tablet-sized layout quirk
@media (max-width: 1080px) {
  .welcome__desktop-section-four-bottom {
    padding-top: 6em;
  }
}
@media (max-width: 900px) {
  .welcome__desktop-section-four-bottom {
    padding-top: 15em;
  }
}

.welcome__desktop-section-four-bottom h2 {
  font-weight: bold;
  font-size: 48px;
  line-height: 59px;
  padding: 0.75em 0 0.75em 0;
}
/* ... */

